[gd_scene load_steps=5 format=2]

[ext_resource path="res://Rooms/Sprites.tres" type="TileSet" id=1]
[ext_resource path="res://Rooms/Room0.gd" type="Script" id=2]
[ext_resource path="res://Rooms/Rock.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.5, 10 )

[node name="Room0" type="Node2D"]
script = ExtResource( 2 )

[node name="Navigation2D" type="Navigation2D" parent="."]
cell_size = 16.0
edge_connection_margin = 16.0
navigation_layers = 5

[node name="TileMap" type="TileMap" parent="Navigation2D"]
z_index = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
bake_navigation = true
format = 1
tile_data = PoolIntArray( 0, 0, 65539, 1, 0, 65539, 2, 0, 65539, 3, 0, 65539, 4, 0, 65539, 5, 0, 65539, 6, 0, 65539, 7, 0, 65539, 8, 0, 262148, 9, 536870912, 327682, 10, 0, 327683, 11, 0, 327683, 12, 0, 327683, 13, 0, 327683, 14, 0, 327683, 15, 0, 327683, 16, 0, 327683, 17, 0, 327683, 18, 0, 327683, 19, 536870912, 327681, 22, 0, 327681, 23, 0, 327682, 24, 0, 327683, 25, 0, 327683, 26, 0, 327683, 27, 0, 327682, 28, -1610612736, 262148, 29, 0, 131075, 65536, 0, 196609, 65537, 0, 65539, 65538, 0, 65539, 65539, 0, 65539, 65540, 0, 65539, 65541, 0, 65539, 65542, 0, 65539, 65543, 0, 262148, 65544, 0, 327684, 65545, 536870912, 393218, 65546, 536870912, 393219, 65547, 536870912, 393219, 65548, 536870912, 393219, 65549, 536870912, 393219, 65550, 536870912, 393219, 65551, 536870912, 393219, 65552, 536870912, 393219, 65553, 536870912, 393219, 65554, 536870912, 393219, 65555, 536870912, 393217, 65558, 0, 393217, 65559, 0, 393218, 65560, 536870912, 393219, 65561, 536870912, 393219, 65562, 536870912, 393219, 65563, 536870912, 393219, 65564, 536870912, 327684, 65565, 0, 262145, 131072, 0, 196609, 131073, 0, 196610, 131074, 0, 131075, 131075, 0, 131075, 131076, 0, 131075, 131077, 0, 131075, 131078, 0, 131075, 131079, 0, 196613, 131080, 0, 393220, 131081, 536870914, 1, 131082, 536870914, 2, 131083, 536870914, 2, 131084, 536870914, 1, 131085, 536870914, 2, 131086, 536870914, 2, 131087, 536870914, 2, 131088, 2, 1, 131089, 2, 2, 131090, 2, 2, 131091, 536870914, 0, 131099, 536870914, 2, 131100, 536870912, 393220, 131101, 0, 196608, 196608, 0, 196609, 196609, 0, 196610, 196610, 0, 196612, 196611, 0, 196612, 196612, 0, 196612, 196613, 0, 196612, 196614, 0, 196612, 196615, 0, 196613, 196616, 0, 393221, 196637, 0, 131072, 262144, 0, 196609, 262145, 0, 196610, 262146, 0, 262147, 262147, 0, 262147, 262148, 0, 262147, 262149, 0, 196612, 262150, 0, 196612, 262151, 0, 196613, 262173, 0, 131072, 327680, 0, 196609, 327681, 0, 196610, 327682, 0, 262147, 327683, 0, 262147, 327684, 0, 262147, 327685, 0, 262147, 327686, 0, 262148, 327687, 0, 262149, 327709, 0, 131072, 393216, 0, 196609, 393217, 0, 196610, 393218, 0, 262148, 393219, 0, 327683, 393220, 0, 327683, 393221, 0, 327683, 393222, 0, 327684, 393223, 0, 327685, 393245, 0, 131072, 458752, 0, 196609, 458753, 0, 196610, 458754, 0, 196613, 458755, 0, 393219, 458756, 0, 393219, 458757, 0, 393219, 458758, 0, 393220, 458759, 0, 393221, 458781, 0, 131072, 524288, 0, 196612, 524289, 0, 262148, 524290, 0, 262149, 524291, 0, 393221, 524292, 2, 1, 524293, 2, 2, 524294, 2, 3, 524295, 0, 196611, 524317, 0, 131072, 589824, 0, 262148, 589825, 0, 327684, 589826, 0, 327685, 589827, 0, 196611, 589853, 0, 131072, 655360, 0, 131077, 655361, 0, 393220, 655362, 0, 393221, 655389, 0, 131072, 720896, 0, 196613, 720897, 2, 3, 786432, 0, 196613, 851968, 0, 196613, 917504, 0, 196613 )

[node name="TileMapFloor" type="TileMap" parent="Navigation2D"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
bake_navigation = true
format = 1
tile_data = PoolIntArray( 20, 536870914, 0, 21, 2, 0, 65556, 536870912, 393216, 65557, 0, 393216, 131081, 536870914, 2, 131082, 536870914, 2, 131091, 536870914, 0, 131092, 7, 0, 131093, 0, 131074, 131094, 2, 0, 131095, 536870914, 1, 131096, 536870914, 2, 131097, 536870914, 2, 131098, 536870914, 2, 131099, 536870914, 3, 196616, 5, 0, 196617, 7, 0, 196618, 7, 0, 196619, 7, 0, 196620, 7, 65536, 196621, 7, 0, 196622, 0, 131074, 196623, 0, 131074, 196624, 0, 131074, 196625, 0, 131074, 196626, 0, 131074, 196627, 0, 131074, 196628, 0, 131074, 196629, 0, 131074, 196630, 0, 131074, 196631, 0, 131074, 196632, 0, 131074, 196633, 0, 131074, 196634, 0, 131074, 196635, 0, 131074, 196636, 536870914, 3, 262152, 7, 0, 262153, 7, 0, 262154, 7, 0, 262155, 7, 65536, 262156, 7, 65536, 262157, 0, 131074, 262158, 0, 131074, 262159, 0, 131074, 262160, 0, 131074, 262161, 0, 131074, 262162, 0, 131074, 262163, 0, 131074, 262164, 0, 131074, 262165, 0, 131074, 262166, 0, 131074, 262167, 0, 131074, 262168, 7, 131072, 262169, 7, 131072, 262170, 7, 131072, 262171, 0, 131074, 262172, 0, 131074, 327687, 0, 131074, 327688, 7, 0, 327689, 7, 0, 327690, 1610612739, 131074, 327691, 536870915, 1, 327692, 536870915, 0, 327693, 3, 0, 327694, 536870915, 1, 327695, -2147483645, 65536, 327696, -2147483645, 65536, 327697, 536870915, 1, 327698, -1610612733, 0, 327699, -2147483645, 0, 327700, 536870915, 1, 327701, -2147483645, 65536, 327702, 3, 65537, 327703, -2147483645, 65536, 327704, -536870909, 2, 327705, 7, 131072, 327706, 7, 131072, 327707, 7, 131072, 327708, 0, 131074, 393223, 0, 131074, 393224, 7, 0, 393225, 7, 0, 393226, -1073741821, 1, 393227, 3, 65537, 393228, 3, 65537, 393229, 3, 65537, 393230, 3, 65537, 393231, 3, 65537, 393232, 3, 65537, 393233, 3, 65537, 393234, 3, 65537, 393235, 3, 65537, 393236, 3, 65537, 393237, 3, 65537, 393238, 3, 65537, 393239, 3, 65537, 393240, 1073741827, 65538, 393241, 0, 131074, 393242, 7, 131072, 393243, 7, 131072, 393244, 0, 131074, 458760, 7, 0, 458761, 7, 0, 458762, -1073741821, 1, 458763, 3, 65537, 458764, 3, 65537, 458765, 3, 65537, 458766, 3, 65537, 458767, 3, 65537, 458768, 3, 65537, 458769, 3, 65537, 458770, 1, 0, 458771, 1, 1, 458772, 1, 2, 458773, 3, 65537, 458774, 3, 65537, 458775, 3, 65537, 458776, 1073741827, 65538, 458777, 0, 131074, 458778, 0, 131074, 458779, 7, 131072, 458780, 0, 131074, 524290, 0, 131074, 524295, 5, 65536, 524296, 7, 0, 524297, 7, 0, 524298, -1073741821, 1, 524299, 3, 65537, 524300, 3, 65537, 524301, 3, 65537, 524302, 3, 65537, 524303, 3, 65537, 524304, 3, 65537, 524305, 3, 65537, 524306, 1, 65536, 524307, 7, 131072, 524308, 1, 65538, 524309, 3, 65537, 524310, 3, 65537, 524311, 3, 65537, 524312, 1073741827, 65538, 524313, 0, 131074, 524314, 0, 131074, 524315, 0, 131074, 524316, 0, 131074, 589826, 0, 131074, 589828, 0, 131074, 589829, 0, 131074, 589830, 7, 0, 589831, 7, 0, 589832, 7, 0, 589833, 0, 131074, 589834, 1610612739, 2, 589835, 3, 65537, 589836, 3, 65537, 589837, 3, 65537, 589838, 3, 65537, 589839, 3, 65537, 589840, 3, 65537, 589841, 3, 65537, 589842, 1, 65536, 589843, 7, 65536, 589844, 1, 65538, 589845, 3, 65537, 589846, 3, 65537, 589847, 3, 65537, 589848, 1073741827, 65538, 589849, 0, 131074, 589850, 0, 131074, 589851, 0, 131074, 589852, 0, 131074, 655363, 7, 0, 655364, 7, 0, 655365, 7, 0, 655366, 7, 0, 655367, 7, 0, 655368, 0, 131074, 655369, 3, 0, 655370, 1073741827, 131073, 655371, 3, 65537, 655372, 3, 65537, 655373, 3, 65537, 655374, 3, 65537, 655375, 3, 65537, 655376, 3, 65537, 655377, 3, 65537, 655378, 1, 131072, 655379, 1, 131073, 655380, 1, 131074, 655381, 3, 65537, 655382, 3, 65537, 655383, 3, 65537, 655384, 3, 131074, 655385, 0, 131074, 655386, 0, 131074, 655387, 0, 131074, 655388, 0, 131074, 720897, 0, 131074, 720898, 0, 131074, 720899, 7, 0, 720900, 7, 65536, 720901, 7, 65536, 720902, 7, 0, 720903, 7, 0, 720904, 536870913, 65536, 720905, 3, 65537, 720906, 3, 65537, 720907, 3, 65537, 720908, 3, 65537, 720909, 3, 65537, 720910, 3, 65537, 720911, 1610612739, 65537, 720912, 3, 131073, 720913, 3, 65537, 720914, 3, 65537, 720915, 3, 65537, 720916, 3, 65537, 720917, 3, 65537, 720918, 3, 65537, 720919, 3, 65537, 720920, 3, 2, 720921, 0, 131074, 720922, 0, 131074, 720923, 0, 131074, 720924, 0, 131074, 786433, 0, 131074, 786434, 0, 131074, 786435, 7, 65536, 786436, 7, 65536, 786437, 7, 65536, 786438, 7, 0, 786439, 7, 0, 786440, 536870913, 65536, 786441, 3, 65537, 786442, 3, 65537, 786443, 3, 65537, 786444, 3, 65537, 786445, 3, 65537, 786446, 3, 65537, 786447, 1073741827, 2, 786448, 0, 131074, 786449, 1073741825, 65538, 786450, 1073741827, 65537, 786451, 3, 65537, 786452, 3, 65537, 786453, -536870909, 65536, 786454, 1, 1, 786455, 1, 1, 786456, 3, 131074, 786457, 7, 131072, 786458, 7, 131072, 786459, 0, 131074, 851969, 0, 131074, 851970, 7, 0, 851971, 7, 65536, 851972, 7, 65536, 851973, 7, 65536, 851974, 7, 65536, 851975, 7, 65536, 851976, -2147483647, 131073, 851977, 3, 65537, 851978, 3, 65537, 851979, 3, 65537, 851980, 3, 65537, 851981, -2147483645, 131074, 851982, 0, 131074, 851983, 0, 131074, 851984, 0, 131074, 851985, 1073741825, 65538, 851986, 1073741825, 131073, 851987, 1073741825, 131073, 851988, 3, 131074, 851989, 0, 131074, 851990, 0, 131074, 851991, 7, 131072, 851992, 7, 131072, 851993, 7, 131072, 851994, 0, 131074, 917505, 0, 131074, 917506, 7, 0, 917507, 7, 0, 917508, 7, 65536, 917509, 7, 65536, 917510, 7, 65536, 917511, 7, 65536, 917512, 1073741825, 65538, 917513, 536870913, 1, 917514, 1073741827, 1, 917515, 536870915, 131073, 917516, -2147483645, 131074, 917517, 0, 131074, 917518, 7, 131072, 917519, 7, 131072, 917520, 0, 131074, 917521, 0, 131074, 917522, 0, 131074, 917523, 0, 131074, 917524, 0, 131074, 917525, 0, 131074, 917526, 7, 131072, 917527, 7, 131072, 917528, 0, 131074, 917529, 0, 131074, 983041, 0, 131074, 983042, 7, 0, 983043, 0, 131074, 983044, 7, 0, 983045, 7, 0, 983046, 7, 131072, 983047, 7, 65536, 983048, 0, 131074, 983049, 0, 131074, 983050, 7, 131072, 983051, 7, 131072, 983052, 7, 131072, 983053, 0, 131074, 983054, 7, 131072, 983055, 7, 131072, 983056, 0, 131074, 983057, 0, 131074, 983058, 0, 131074, 983059, 0, 131074, 983060, 0, 131074, 983061, 0, 131074, 983062, 0, 131074, 983063, 0, 131074, 983064, 0, 131074, 1048578, 0, 131074, 1048579, 0, 131074, 1048580, 0, 131074, 1048581, 0, 131074, 1048582, 0, 131074, 1048583, 0, 131074, 1048584, 0, 131074, 1048585, 0, 131074, 1048586, 0, 131074, 1048587, 0, 131074, 1048588, 0, 131074, 1048589, 0, 131074, 1048590, 0, 131074, 1048591, 0, 131074, 1048592, 0, 131074 )

[node name="TileMapDetails" type="TileMap" parent="Navigation2D"]
z_index = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
bake_navigation = true
format = 1
tile_data = PoolIntArray( 196631, 536870925, 0, 262166, 536870925, 0, 262167, 536870925, 0, 262168, 536870927, 0, 262170, 536870929, 0, 262171, 17, 0, 327702, 536870925, 0, 327706, 536870929, 0, 327707, 536870929, 0, 393228, 536870922, 0, 393241, 536870929, 0, 393242, 536870929, 0, 393243, 17, 0, 458777, 17, 0, 458778, 17, 0, 458779, 17, 0, 524307, 536870926, 0, 524314, 536870929, 0, 524315, 536870929, 0, 589848, 536870927, 0, 589851, 15, 0, 655365, 536870930, 0, 655368, 536870924, 0, 655369, 536870924, 0, 720898, 18, 0, 720899, 536870930, 0, 720900, 536870928, 0, 720904, 536870924, 0, 720909, 536870922, 0, 786434, 536870930, 0, 786435, 18, 0, 851969, 536870930, 0, 851970, 536870928, 0, 851972, 536870930, 0, 851973, 536870930, 0, 917505, 18, 0, 917508, 16, 0, 983042, 536870930, 0, 983043, 18, 0 )

[node name="TileMapBack" type="TileMap" parent="Navigation2D"]
z_index = 2
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
bake_navigation = true
format = 1
tile_data = PoolIntArray( 720924, 0, 1, 720925, 0, 65537, 786459, 0, 65536, 786460, 0, 65537, 786461, 0, 65538, 851994, 0, 65536, 851995, 0, 65537, 851996, 0, 65538, 851997, 0, 65538, 917529, 0, 1, 917530, 0, 65537, 917531, 0, 131075, 917532, 0, 131075, 917533, 0, 131075, 983040, 536870912, 65537, 983041, 536870912, 65536, 983057, 0, 1, 983058, 0, 2, 983059, 0, 2, 983060, 0, 2, 983061, 0, 2, 983062, 0, 2, 983063, 0, 2, 983064, 0, 3, 983065, 0, 65537, 983066, 0, 131075, 983067, 0, 131075, 983068, 0, 131075, 983069, 0, 131075, 1048576, 0, 131075, 1048577, 536870912, 65537, 1048578, 536870912, 2, 1048579, 536870912, 3, 1048580, 0, 2, 1048581, 0, 4, 1048584, 0, 1, 1048585, 0, 2, 1048586, 0, 2, 1048587, 0, 2, 1048588, 0, 3, 1048589, 0, 2, 1048590, 0, 2, 1048591, 0, 2, 1048592, 0, 3, 1048593, 0, 65537, 1048594, 0, 131075, 1048595, 0, 131075, 1048596, 0, 131075, 1048597, 0, 131075, 1048598, 0, 131075, 1048599, 0, 131075, 1048600, 0, 131075, 1048601, 0, 131075, 1048602, 0, 131075, 1048603, 0, 131075, 1048604, 0, 131075, 1048605, 0, 131075 )

[node name="Entrance" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Entrance"]
position = Vector2( 113, 259 )

[node name="Rocks" type="Node2D" parent="."]

[node name="Rock" parent="Rocks" instance=ExtResource( 3 )]
position = Vector2( 335, 0 )

[node name="EnemyPositions" type="Node2D" parent="."]
z_index = 1

[node name="Position2D" type="Position2D" parent="EnemyPositions"]
position = Vector2( 362, 123 )

[node name="Position2D2" type="Position2D" parent="EnemyPositions"]
position = Vector2( 262, 67 )

[node name="Position2D3" type="Position2D" parent="EnemyPositions"]
position = Vector2( 149, 136 )

[node name="Position2D4" type="Position2D" parent="EnemyPositions"]
position = Vector2( 308, 218 )

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2( 101, 259 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 12, -10 )
shape = SubResource( 1 )

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_Area2D_body_entered"]
